<resources>
    <string name="app_name">AMF 2014</string>
    <string name="title_activity_amffirst">AMF 2014</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="title_activity_schedule">ScheduleActivity</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_personal">PersonalActivity</string>
    <string name="title_activity_qrcode_scan">QRCodeScanActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_introduction_detail">IntroductionDetailActivity</string>
    <string name="title_activity_teacher_detail">TeacherDetailActivity</string>
    <string name="title_activity_schedule_detail">ScheduleDetailActivity</string>
    <string name="title_activity_schedule_detail_evalute">ScheduleDetailEvaluteActivity</string>
    <string name="title_activity_friend_detail">FriendDetailActivity</string>
    <string name="title_activity_contact_detail">ContactDetailActivity</string>
    <string name="title_activity_news_detail">NewsDetailActivity</string>
    <string name="amffirst_headbar_text">2014 Asian MICE Forum</string>
    <string name="amffirst_bt1_text">About</string>
    <string name="amffirst_bt2_text">Agenda</string>
    <string name="amffirst_bt3_text">Speakers</string>
    <string name="amffirst_bt4_text">Name Card</string>
    <string name="amffirst_bt5_text">QR Scan</string>
    <string name="amffirst_bt6_text">Attendees</string>
    <string name="amffirst_bt7_text">News</string>
    <string name="amffirst_bt8_text">Fanpage</string>
    <string name="amffirst_bt9_text">Partners</string>
    <string name="introduction_headbar_text">Introduction</string>
    <string name="schedule_header_text">Session / Topics</string>
    <string name="schdule_day1_tab_descp">9-17 Wed.</string>
    <string name="schdule_day2_tab_descp">9-18 Thu.</string>
    <string name="schedule_time_text">Time</string>
    <string name="schedule_session_text">Session</string>
    <string name="schedule_detail_text">Detail</string>
    <string name="schedule_moderator_text">Moderator</string>
    <string name="schedule_rate_text">Rate</string>
    <string name="schedule_rate_ok_text">Done</string>
    <string name="schedule_rate_score_text">Score</string>
    <string name="schedule_rate_suggestion_text">Suggestion</string>
    <string name="schedule_rate_suggestion_text_hint">Write Suggestion...</string>
    <string name="schdule_day1_descp_line1">Please note: The agenda may be revised.</string>
    <string name="schdule_day1_descp_line2">Date: September 17-18, 2014 (Wednesday - Thursday)</string>
    <string name="schdule_day1_descp_line3">Venue: Room 101 at the Taipei International Convention Center (TICC)</string>
    <string name="schdule_day1_descp_line4">Theme: Crossover Innovation</string>
    <string name="schdule_day2_descp_line1">Please note: The agenda may be revised.</string>
    <string name="schdule_day2_descp_line2">Date: September 17-18, 2014 (Wednesday - Thursday)</string>
    <string name="schdule_day2_descp_line3">Venue: Room 101 at the Taipei International Convention Center (TICC)</string>
    <string name="schdule_day2_descp_line4">Theme: Crossover Innovation</string>
    <string name="schdule_day1_descp_cell1">RegistrationOpening Remarks</string>
    <string name="schdule_day1_descp_cell2">Opening Remarks</string>
    <string name="schdule_day1_descp_cell3">Keynote Speech 1:\nNext Step - The Power of Creativity\n and Storytelling</string>
    <string name="schdule_day1_descp_cell4">CEO Discussing:\nNew Trends of the MICE Industry</string>
    <string name="schdule_day1_descp_cell5">Break</string>
    <string name="schdule_day1_descp_cell6">Keynote Speech 2:\nSuccess of Tokyo Marathon</string>
    <string name="schdule_day1_descp_cell7">Panel Session 1:\nDestination Marketing Innovation</string>
    <string name="schdule_day2_descp_cell1">Keynote Speech 3:\nSydney Festival</string>
    <string name="schdule_day2_descp_cell2">Keynote Speech 4:\nCase Sharing - \n 2014 UFI ICT Award</string>
    <string name="schdule_day2_descp_cell3">Break</string>
    <string name="schdule_day2_descp_cell4">Keynote Speech 5:\nCase Sharing - \n2013 SITE Crystal Award</string>
    <string name="schdule_day2_descp_cell5">Keynote Speech 6:\nCase Sharing - \n2013 ICCA Best Marketing Award</string>
    <string name="schdule_day2_descp_cell6">Launch</string>
    <string name="schdule_day2_descp_cell7">Panel Discussion 2:\nCross Strait Forum on Business Cooperation\nOpportunities - Exhibition</string>
    <string name="schdule_day2_descp_cell8">Break</string>
    <string name="schdule_day2_descp_cell9">Panel Discussion 3:\nCross Strait Case Sharing -\nSuccessful Experience Marketing</string>
    <string name="speaker_header_text">Speakers</string>
    <string name="speaker_day1_tab_descp">9-17 Wed.</string>
    <string name="speaker_day2_tab_descp">9-18 Thu.</string>
    <string name="personal_header_text">Name Card</string>
    <string name="personal_name_hint_text">Name</string>
    <string name="personal_orgenization_hint_text">Company/Job Title</string>
    <string name="personal_phone_number_hint_text">Phone Number</string>
    <string name="personal_email_hint_text">Email</string>
    <string name="personal_regenerate_qrcode_text">Name Card</string>
    <string name="personal_edit_text">Edit</string>
    <string name="personal_edit_ok_text">Done</string>
    <string name="qrcode_header_text">QR Scan</string>
    <string name="contact_header_text">Attendees</string>
    <string name="contact_email_to_text">Send Email</string>
    <string name="contact_add_to_contact_text">Add to Contact</string>
    <string name="news_header_text">News </string>
    <string name="news_tab1_text">Content</string>
    <string name="news_tab2_text">Album</string>
    <string name="facebook_header_text">Fanpage</string>
    <string name="friend_header_text">Partners</string>
    <string name="friend_group1_name_text">International Exhibition Organizations</string>
    <string name="friend_group2_name_text">Domestic Exhibition Association</string>
    <string name="friend_group3_name_text">Government Exhibition Promote Unit</string>
    <string name="app_picker_name">Applications</string>
    <string name="bookmark_picker_name">Bookmarks</string>
    <string name="button_add_calendar">Add to calendar</string>
    <string name="button_add_contact">Add contact</string>
    <string name="button_book_search">Book Search</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_custom_product_search">Custom search</string>
    <string name="button_dial">Dial number</string>
    <string name="button_email">Send email</string>
    <string name="button_get_directions">Get directions</string>
    <string name="button_mms">Send MMS</string>
    <string name="button_ok">OK</string>
    <string name="button_open_browser">Open browser</string>
    <string name="button_product_search">Product search</string>
    <string name="button_search_book_contents">Search contents</string>
    <string name="button_share_app">Application</string>
    <string name="button_share_bookmark">Bookmark</string>
    <string name="button_share_by_email">Share via email</string>
    <string name="button_share_by_sms">Share via SMS</string>
    <string name="button_share_clipboard">Clipboard</string>
    <string name="button_share_contact">Contact</string>
    <string name="button_show_map">Show map</string>
    <string name="button_sms">Send SMS</string>
    <string name="button_web_search">Web search</string>
    <string name="button_wifi">Connect to Network</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="history_clear_text">Clear history</string>
    <string name="history_clear_one_history_text">Clear</string>
    <string name="history_email_title">Barcode Scanner history</string>
    <string name="history_empty">Empty</string>
    <string name="history_empty_detail">No barcode scans have been recorded</string>
    <string name="history_send">Send history</string>
    <string name="history_title">History</string>
    <string name="menu_encode_mecard">Use MECARD</string>
    <string name="menu_encode_vcard">Use vCard</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_format">Format</string>
    <string name="msg_default_meta">Metadata</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="msg_default_time">Time</string>
    <string name="msg_default_type">Type</string>
    <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
    <string name="msg_error">Error</string>
    <string name="msg_google_books">Google</string>
    <string name="msg_google_product">Google</string>
    <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
    <string name="msg_invalid_value">Invalid value</string>
    <string name="msg_redirect">Redirect</string>
    <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
    <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
    <string name="msg_sbc_no_page_returned">No page returned</string>
    <string name="msg_sbc_page">Page</string>
    <string name="msg_sbc_results">Results</string>
    <string name="msg_sbc_searching_book">Searching book\u2026</string>
    <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
    <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
    <string name="msg_share_text">Or type some text and press Enter</string>
    <string name="msg_sure">Are you sure?</string>
    <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_auto_focus_title">Use auto focus</string>
    <string name="preferences_auto_open_web_title">Open web pages automatically</string>
    <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
    <string name="preferences_bulk_mode_title">Bulk scan mode</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
    <string name="preferences_custom_product_search_title">Custom search URL</string>
    <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
    <string name="preferences_decode_1D_product_title">1D Product</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
</resources>