<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF" >
        
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#00000000"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" 
            android:background="@drawable/head_bar_bg"
            android:orientation="horizontal" >
  
            
            <Button 
                android:id="@+id/back_btn"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:textSize="30dp"
                android:text="&lt;"
                android:textColor="#FFFFFFFF"
                android:background="#00000000" >
            </Button>
             <TextView android:text="@string/schedule_header_text"
                 android:textSize="20dp"
                 android:textColor="#FFFFFFFF"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="0.6"
                 android:background="#00000000"
                                  
                 />
            <Button 
                android:id="@+id/complete_btn"
                android:text="@string/schedule_rate_ok_text"
                android:textSize="20dp"
                android:textColor="#FFFFFFFF"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:background="#00000000"  >
            </Button>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9" 
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
            <!--  major body -->
			<ScrollView 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent" >
				<TableLayout android:layout_width="match_parent" android:layout_height="match_parent" >
					<TableRow  android:background="#0099FF" android:paddingTop="16dip" android:paddingBottom="16dip" android:gravity="center" android:textAlignment="gravity">
				    	<TextView android:id="@+id/score_header_text_view"
				    	    android:text="@string/schedule_rate_score_text" 
				    	    android:textColor="#FFFFFF" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:textAlignment="gravity" />				    
					</TableRow>
					 
					<TableRow  android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" android:gravity="center" android:textAlignment="gravity">					    
				    	<Spinner
				    	    android:id="@+id/score_content_spinner" 
				    	    android:textColor="#0099FF" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:textAlignment="gravity" 
				    	    />
					</TableRow>				

			
					
					
					<TableRow  android:background="#0099FF" android:paddingTop="16dip" android:paddingBottom="16dip" android:gravity="center" android:textAlignment="gravity">
				    	<TextView android:id="@+id/suggestion_header_text_view"
				    	    android:text="@string/schedule_rate_suggestion_text" 
				    	    android:textColor="#FFFFFF" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:textAlignment="gravity" />				    
					</TableRow>
	
					<TableRow  android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" android:gravity="center" android:textAlignment="gravity">
				    	<EditText
				    	    android:id="@+id/suggestion_content_text_view"
				    	    android:text="\n\n\n\n\n\n\n\n"
				    	    android:hint="@string/schedule_rate_suggestion_text_hint" 
				    	    android:textColor="#0099FF" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:textAlignment="gravity" />
					</TableRow>			
				
										
						
										
									    				    
				</TableLayout>
				    
			    
			</ScrollView>
            
            
        </LinearLayout>
	</LinearLayout>
	
    
</FrameLayout>
