<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" 
            android:background="@drawable/head_bar_bg"
            android:orientation="horizontal" >
     
			<Button 
                android:id="@+id/back_btn"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:textSize="30dp"
                android:text="&lt;"
                android:textColor="#FFFFFFFF"
                android:background="#00000000" >
            </Button>
             <TextView android:text="@string/news_header_text"
                 android:textSize="20dp"
                 android:textColor="#FFFFFFFF"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="0.6"
                 android:background="#00000000"
                                  
                 />
            <Button 
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:background="#00000000" >
            </Button>
            
        </LinearLayout>

        
		<LinearLayout
           android:layout_width="match_parent"
           android:layout_height="0dp" 
   		   android:layout_weight="0.085"
   		   android:orientation="horizontal"
   		   
           >
            
			<Button android:id="@+id/left_content_btn"
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
			    android:layout_weight="1"
			    android:text="@string/news_tab1_text"
			    android:textColor="#0099FF"
			    android:textSize="20dp"
			    android:background="#FFFFFF"
			    />
			<Button android:id="@+id/right_content_btn"
			    android:layout_width="0dp"
			    android:layout_height="match_parent"
			    android:layout_weight="1"
			    android:text="@string/news_tab2_text" 
			    android:textColor="#FFFFFF"
			    android:textSize="20dp"
			    android:background="#0099FF"
			    />
		</LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.815"
            android:orientation="vertical" >
			
			<ListView android:id="@+id/list_view"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
		        android:drawSelectorOnTop="true"
	    		android:clickable="true"
	    		android:cacheColorHint="#00000000"
	    		android:background="#00000000"
			    />
			<WebView android:id="@+id/photo_web_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
			/>						
            <!--  major body -->
        </LinearLayout>
	</LinearLayout> 
</FrameLayout>
