<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1" 
            android:background="@drawable/head_bar_bg"
            android:orientation="horizontal" >
            
			<Button 
                android:id="@+id/back_btn"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:textSize="30dp"
                android:text="&lt;"
                android:textColor="#FFFFFFFF"
                android:background="#00000000" >
            </Button>
             <TextView android:text="@string/contact_header_text"
                 android:textSize="20dp"
                 android:textColor="#FFFFFFFF"
                 android:gravity="center"
                 android:layout_height="wrap_content"
                 android:layout_width="0dp"
                 android:layout_weight="0.6"
                 android:background="#00000000"
                                  
                 />
            <Button 
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:background="#00000000" >
            </Button>
            
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9" 
            >
		
			<ScrollView
			    android:visibility="visible" 
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    >
				<TableLayout android:layout_width="match_parent" android:layout_height="match_parent" >
					
					<TableRow 
						android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" >				    	
				    	<ImageView
				    	    android:paddingLeft="10dip"  
				    	     android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.12" 
				    	     android:gravity="right" android:textAlignment="gravity"
				    	     android:background="@drawable/icon_contact1" 
				    	     />
				    	<TextView android:id="@+id/contact_name_text_view"
				    	    android:padding="10dip" 
				    	    android:text="黃多莉" 
				    	    android:textColor="#707070" 
				    	    android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.88" />
					</TableRow>
					
					<View android:layout_height="1dip" android:background="#707070" />
					
					<TableRow 
						android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" >				    	
				    	<ImageView
				    	    android:paddingLeft="10dip"  
				    	     android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.12" 
				    	     android:gravity="right" android:textAlignment="gravity"
				    	     android:background="@drawable/icon_contact2" 
				    	     />
				    	<TextView android:id="@+id/contact_jobtitle_text_view"
				    	    android:padding="10dip" 
				    	    android:text="補習班導師" 
				    	    android:textColor="#707070" 
				    	    android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.88" />
					</TableRow>
					
					<View android:layout_height="1dip" android:background="#707070" />
					
					<TableRow 
						android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" >				    	
				    	<ImageView
				    	    android:paddingLeft="10dip"  
				    	     android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.12" 
				    	     android:gravity="right" android:textAlignment="gravity"
				    	     android:background="@drawable/icon_contact3" 
				    	     />
				    	<TextView android:id="@+id/contact_company_text_view"
				    	    android:padding="10dip" 
				    	    android:text="公司名稱" 
				    	    android:textColor="#707070" 
				    	    android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.88" />
					</TableRow>
					<View android:layout_height="1dip" android:background="#707070" />					
															
					<TableRow 
						android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" >				    	
				    	<ImageView
				    	    android:paddingLeft="10dip"  
				    	     android:layout_width="0dp" android:layout_height="match_parent" android:layout_weight="0.12" 
				    	     android:gravity="right" android:textAlignment="gravity"
				    	     android:background="@drawable/icon_contact4" 
				    	     />
				    	<TextView android:id="@+id/contact_email_text_view"
				    	    android:padding="10dip" 
				    	    android:text="Email信箱" 
				    	    android:textColor="#707070" 
				    	    android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.88" />
					</TableRow>
					<View android:layout_height="1dip" android:background="#707070" />
					
										
					<TableRow android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" android:paddingLeft="20dip" android:paddingRight="20dip">
					    <Button android:id="@+id/send_email_btn"
					        android:layout_weight="1"
					        android:layout_height="wrap_content"
					        android:layout_width="0dp"
					        android:gravity="center" android:textAlignment="gravity"
					        android:text="@string/contact_email_to_text"
					        android:background="#0099FF"
					        android:textColor="#FFFFFF"
					        android:padding="6dip"
					         />
					</TableRow>

										
					<TableRow android:background="#FFFFFF" android:paddingTop="16dip" android:paddingBottom="16dip" android:paddingLeft="20dip" android:paddingRight="20dip">
					    <Button android:id="@+id/add_to_contact_btn"
					        android:layout_weight="1"
					        android:layout_height="wrap_content"
					        android:layout_width="0dp"
					        android:gravity="center" android:textAlignment="gravity"
					        android:text="@string/contact_add_to_contact_text"
					        android:background="#0099FF"
					        android:textColor="#FFFFFF"
					        android:padding="6dip"
					         />
					</TableRow>
										
													
				</TableLayout>
				
			</ScrollView>            <!--  major body -->
        </LinearLayout>
	</LinearLayout> 
</FrameLayout>
